--- a/docker-compose.override_.yml
+++ b/docker-compose.override_.yml
@@ -8,10 +8,10 @@ services:
       DOMAIN: DGS
     command: tail -f /dev/null
     volumes:
-      - backups:/backups
-      - sbin:/usr/local/sbin
+      - ./backups:/backups
+      - ./sbin:/usr/local/sbin
     ports:
       - 137:137/udp
       - 138:138/udp
       - 139:139
-      - 445:445
+      - 445:445      
