samba-* prefix for scripts

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -12,5 +12,5 @@ RUN mv /etc/samba/smb.conf /etc/samba/smb.ORIG.conf
 WORKDIR /usr/local/sbin
 COPY sbin/* ./
 
-CMD domain-provision && samba -F
+CMD samba-domain-provision && samba -F
 EXPOSE 137/udp 138/udp 139 445
