--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -8,9 +8,7 @@ RUN apt update && apt upgrade -y && \
     apt autoremove -y
 
 RUN mv /etc/samba/smb.conf /etc/samba/smb.ORIG.conf
-
-WORKDIR /usr/local/sbin
-COPY sbin/* ./
+COPY sbin/ /usr/local/
 
 CMD bash -c "samba-domain-provision && samba -F"
 EXPOSE 137/udp 138/udp 139 445
