--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.almalinux
     container_name: dc1
     hostname: DC1
     privileged: true
@@ -48,6 +48,28 @@ services:
     volumes:
       - var-lib-samba:/var/lib/samba
 
+  dc3:
+    image: samba:rockylinux
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile.rockylinux
+    container_name: dc3
+    hostname: DC3
+    privileged: true
+    environment:
+      REALM: DGS.NET
+      SEARCH_DOMAIN: dgs.net
+      DOMAIN: DGS
+      ADMIN_PASS: Passw0rd
+      DNS_FORWARDER: 8.8.8.8
+      SERVER_ROLE: dc
+      DNS_BACKEND: SAMBA_INTERNAL
+    command: bash -c "samba-domain-join && samba -F"
+    volumes:
+      - usr-local-samba-dc3:/usr/local/samba
+
 volumes:
   usr-local-samba:
+  usr-local-samba-dc3:
   var-lib-samba:
