--- a/Dockerfile.rockylinux
+++ b/Dockerfile.rockylinux
@@ -12,7 +12,7 @@ RUN yum update -y && \
   python3-dns python3-gpg python36-devel readline-devel rpcgen systemd-devel \
   tar zlib-devel \
   bind-utils flex dbus-devel libtirpc-devel python3-markdown bison perl-JSON \
-  iproute python3-setproctitle -y && \
+  iproute python3-setproctitle netcat -y && \
   yum clean all -y
 
 ENV SMB_VERSION latest
