--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -10,5 +10,5 @@ RUN apt update && apt upgrade -y && \
 
 WORKDIR /usr/local/sbin
 COPY sbin /usr/local/sbin
-CMD bash -c "samba-domain-provision && samba -F"
+CMD bash -c "samba -F"
 EXPOSE 137/udp 138/udp 139 445
