bind interface on domain join but no for docker compose testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       DNS_BACKEND: SAMBA_INTERNAL
       SAMBA_PATH: /var/lib/samba
     command: bash -c "
-      samba-domain-join DC1 &&
+      samba-domain-join-no-bind DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
       samba -F"
@@ -78,7 +78,7 @@ services:
       SERVER_ROLE: dc
       DNS_BACKEND: SAMBA_INTERNAL
     command: bash -c "
-      samba-domain-join DC1 &&
+      samba-domain-join-no-bind DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       samba -F"
