keep SERVER_ROLE and DNS_BACKEND env vars explicit

--- a/docker-compose-dc1-no-host.yml
+++ b/docker-compose-dc1-no-host.yml
@@ -16,6 +16,8 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
+      SERVER_ROLE: dc
+      DNS_BACKEND: SAMBA_INTERNAL
     command: bash -c "
       samba-domain-provision-no-bind &&
       samba -F"
