almalinux 9, add volumes inside dockerfiles, set -x for testing

--- a/Dockerfile.rockylinux
+++ b/Dockerfile.rockylinux
@@ -36,4 +36,5 @@ RUN ./configure && \
 WORKDIR /usr/local/sbin
 COPY sbin /usr/local/sbin
 CMD bash -c "samba-domain-provision && samba -F"
+VOLUME /usr/local/samba
 EXPOSE 53 53/udp 88 88/udp 123/udp 135 137/udp 138/udp 139 389 389/udp 445 464 464/udp 636 3268 3269 49152-65535
