--- a/Dockerfile.almalinux
+++ b/Dockerfile.almalinux
@@ -1,18 +1,18 @@
-FROM almalinux:8
+FROM almalinux:9
 
 RUN yum update -y && \
-  yum install epel-release -y && \
-  yum install dnf-plugins-core -y && \
-  yum config-manager --set-enabled powertools && \
+  yum install epel-release yum-utils -y && \
+  yum config-manager --enable epel && \
+  yum config-manager --set-enabled crb && \
   yum install docbook-style-xsl gcc gdb gnutls-devel gpgme-devel jansson-devel \
   keyutils-libs-devel krb5-workstation libacl-devel libaio-devel \
   libarchive-devel libattr-devel libblkid-devel libtasn1 libtasn1-tools \
   libxml2-devel libxslt lmdb-devel openldap-devel pam-devel perl \
   perl-ExtUtils-MakeMaker perl-Parse-Yapp popt-devel python3-cryptography \
-  python3-dns python3-gpg python36-devel readline-devel rpcgen systemd-devel \
+  python3-dns python3-gpg python3-devel readline-devel rpcgen systemd-devel \
   tar zlib-devel \
   bind-utils flex dbus-devel libtirpc-devel python3-markdown bison perl-JSON \
-  iproute python3-setproctitle netcat -y && \
+  iproute netcat -y && \
   yum clean all -y
 
 ENV SMB_VERSION latest
@@ -36,4 +36,5 @@ RUN ./configure && \
 WORKDIR /usr/local/sbin
 COPY sbin /usr/local/sbin
 CMD bash -c "samba-domain-provision && samba -F"
+VOLUME /usr/local/samba
 EXPOSE 53 53/udp 88 88/udp 123/udp 135 137/udp 138/udp 139 389 389/udp 445 464 464/udp 636 3268 3269 49152-65535
