--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
       samba-domain-provision-no-bind &&
+      echo -e \"nameserver 172.16.238.20\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.30\" >> /etc/resolv.conf &&
       samba -F"
     volumes:
       - dc1-local-samba:/usr/local/samba
@@ -54,6 +56,8 @@ services:
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
       samba-domain-join-no-bind DC1 &&
+      echo -e \"nameserver 172.16.238.10\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.30\" >> /etc/resolv.conf &&
       samba -F"
     volumes:
       - dc2-lib-samba:/var/lib/samba
@@ -83,7 +87,9 @@ services:
       update-etc-resolv-hosts &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
-      samba-domain-join-no-bind DC1 &&      
+      samba-domain-join-no-bind DC1 &&
+      echo -e \"nameserver 172.16.238.10\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.20\" >> /etc/resolv.conf &&     
       samba -F"
     volumes:
       - dc3-local-samba:/usr/local/samba
