--- a/.github/workflows/rockylinux-image.yml
+++ b/.github/workflows/rockylinux-image.yml
@@ -1,4 +1,4 @@
-name: Almalinux Image CI
+name: Rockylinux Image CI
 
 on:
   push:
@@ -10,9 +10,9 @@ jobs:
 
   build:
 
-    runs-on: almalinux-9
+    runs-on: rockylinux-8
 
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.almalinux --tag samba-almalinux
+      run: docker build . --file Dockerfile.rockylinux --tag samba-rockylinux
