--- a/Dockerfile.rockylinux
+++ b/Dockerfile.rockylinux
@@ -1,18 +1,18 @@
-FROM rockylinux:8
+FROM rockylinux:9
 
 RUN yum update -y && \
-  yum install epel-release -y && \
-  yum install dnf-plugins-core -y && \
-  yum config-manager --set-enabled powertools && \
+  yum install epel-release yum-utils -y && \
+  yum config-manager --enable epel && \
+  yum config-manager --set-enabled crb && \
   yum install docbook-style-xsl gcc gdb gnutls-devel gpgme-devel jansson-devel \
   keyutils-libs-devel krb5-workstation libacl-devel libaio-devel \
   libarchive-devel libattr-devel libblkid-devel libtasn1 libtasn1-tools \
   libxml2-devel libxslt lmdb-devel openldap-devel pam-devel perl \
   perl-ExtUtils-MakeMaker perl-Parse-Yapp popt-devel python3-cryptography \
-  python3-dns python3-gpg python36-devel readline-devel rpcgen systemd-devel \
+  python3-dns python3-gpg python3-devel readline-devel rpcgen systemd-devel \
   tar zlib-devel \
   bind-utils flex dbus-devel libtirpc-devel python3-markdown bison perl-JSON \
-  iproute python3-setproctitle netcat -y && \
+  iproute netcat -y && \
   yum clean all -y
 
 ENV SMB_VERSION latest
