add debian and ubuntu compiled from source

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,10 @@ services:
       samba-domain-provision-no-bind-interfaces &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
+      echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
       echo -e \"nameserver 172.16.238.20\" >> /etc/resolv.conf &&
       echo -e \"nameserver 172.16.238.30\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.40\" >> /etc/resolv.conf &&
       samba -F"
     volumes:
       - dc1-local-samba:/usr/local/samba
@@ -44,18 +46,18 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
-      SAMBA_PATH: /var/lib/samba
     command: bash -c "
       set -x &&
       samba-domain-join-no-bind-interfaces DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
+      echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
       echo -e \"nameserver 172.16.238.10\" >> /etc/resolv.conf &&
       echo -e \"nameserver 172.16.238.30\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.40\" >> /etc/resolv.conf &&
       samba -F"
     volumes:
-      - dc2-lib-samba:/var/lib/samba
-      - dc2-etc-samba:/etc/samba
+      - dc2-local-samba:/usr/local/samba
     networks:
       static-network:
         ipv4_address: 172.16.238.20
@@ -79,8 +81,10 @@ services:
       samba-domain-join-no-bind-interfaces DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
+      echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
       echo -e \"nameserver 172.16.238.10\" >> /etc/resolv.conf &&
       echo -e \"nameserver 172.16.238.20\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.40\" >> /etc/resolv.conf &&
       samba -F"
     volumes:
       - dc3-local-samba:/usr/local/samba
@@ -88,11 +92,41 @@ services:
       static-network:
         ipv4_address: 172.16.238.30
 
+  dc4:
+    image: samba:debian
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile.debian
+    container_name: dc4
+    hostname: DC4
+    privileged: true
+    environment:
+      REALM: DGS.NET
+      DOMAIN: DGS
+      ADMIN_PASS: Passw0rd
+      DNS_FORWARDER: 8.8.8.8
+    command: bash -c "
+      set -x &&
+      samba-domain-join-no-bind-interfaces DC1 &&
+      echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
+      echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
+      echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
+      echo -e \"nameserver 172.16.238.10\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.20\" >> /etc/resolv.conf &&
+      echo -e \"nameserver 172.16.238.30\" >> /etc/resolv.conf &&
+      samba -F"
+    volumes:
+      - dc4-local-samba:/usr/local/samba
+    networks:
+      static-network:
+        ipv4_address: 172.16.238.40
+
 volumes:
   dc1-local-samba:
-  dc2-lib-samba:
-  dc2-etc-samba:
+  dc2-local-samba:
   dc3-local-samba:
+  dc4-local-samba:
 
 networks:
   static-network:
