--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3.8"
 
 services:
   dc1:
@@ -15,9 +15,10 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
+      BIND_NETWORK_INTERFACES: false
     command: bash -c "
       set -x &&
-      samba-domain-provision-no-bind-interfaces &&
+      samba-domain-provision &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
       echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
@@ -46,9 +47,10 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
+      BIND_NETWORK_INTERFACES: false
     command: bash -c "
       set -x &&
-      samba-domain-join-no-bind-interfaces DC1 &&
+      samba-domain-join DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
       echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
@@ -76,9 +78,10 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
+      BIND_NETWORK_INTERFACES: false
     command: bash -c "
       set -x &&
-      samba-domain-join-no-bind-interfaces DC1 &&
+      samba-domain-join DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       echo -e \"172.16.238.40 DC4.dgs.net DC4\" >> /etc/hosts &&
@@ -106,9 +109,10 @@ services:
       DOMAIN: DGS
       ADMIN_PASS: Passw0rd
       DNS_FORWARDER: 8.8.8.8
+      BIND_NETWORK_INTERFACES: false
     command: bash -c "
       set -x &&
-      samba-domain-join-no-bind-interfaces DC1 &&
+      samba-domain-join DC1 &&
       echo -e \"172.16.238.10 DC1.dgs.net DC1\" >> /etc/hosts &&
       echo -e \"172.16.238.20 DC2.dgs.net DC2\" >> /etc/hosts &&
       echo -e \"172.16.238.30 DC3.dgs.net DC3\" >> /etc/hosts &&
