--- a/.github/workflows/debian-image.yml
+++ b/.github/workflows/debian-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.debian --tag samba-debian
+      run: docker build . --file dockerfiles/Dockerfile.debian --tag samba-debian
