--- a/.github/workflows/rockylinux-image.yml
+++ b/.github/workflows/rockylinux-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.rockylinux --tag samba-rockylinux
+      run: docker build . --file dockerfiles/Dockerfile.rockylinux --tag samba-rockylinux
