--- a/.github/workflows/ubuntu-image.yml
+++ b/.github/workflows/ubuntu-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile.ubuntu --tag samba-ubuntu
+      run: docker build . --file dockerfiles/Dockerfile.ubuntu --tag samba-ubuntu
