--- a/docker-compose-dc1.yml
+++ b/docker-compose-dc1.yml
@@ -7,7 +7,7 @@ services:
     network_mode: host
     build:
       context: .
-      dockerfile: dockerfiles/Dockerfile.almalinux
+      dockerfile: dockerfiles/almalinux
     container_name: dc1
     hostname: DC1
     privileged: true
