--- a/docker-compose-dc1.yml
+++ b/docker-compose-dc1.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: .
       dockerfile: dockerfiles/almalinux
+      args:
+        SMB_VERSION: "${SMB_VERSION:-latest}"
     container_name: dc1
     hostname: DC1
     privileged: true
